[package]
name = "genomap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
thiserror = "1.0.56"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv", "csv_output"] }
fnv = "1.0.7"
indexmap = "2.2.2"
rand = "0.8.5"


[[bench]]
name = "comparison"
harness = false

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
