[package]
name = "genomap"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
keywords = ["genomics", "bioinformatics", "compbio"]
categories = ["science"]
repository = "https://github.com/vsbuffalo/genomap"
description = "A small library for storing generic genomic data indexed by a chromosome."

[dependencies]
fnv = "1.0.7"
thiserror = "1.0.56"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv", "csv_output"] }
fnv = "1.0.7"
indexmap = "2.2.2"
rand = "0.8.5"


[[bench]]
name = "comparison"
harness = false

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
